<resources>
    <string name="app_name">Manhunt</string>
    <string name="Sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="name">Display Name:</string>
    <string name="email">Email:</string>
    <string name="Welcome">You have joined the Manhunt</string>
    <string name="example_name">Brandon Cole</string>
    <string name="example_email">brandoncole673@gmail.com</string>
    <string name="example_password">unknown21</string>
    <string name="user">User</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="delete_acc_mess">Account Deleted</string>
    <string name="title_activity_base_page">base_page</string>
    <string name="title_activity_sign_in">SignIn</string>

    <string name="enter_email">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="title_activity_game_page">gamePage</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="email_field_default">brandoncole673@gmail.com</string>
    <string name="pw_field_default">Unknown21</string>
    <string name="dn_field_default">Brandon</string>



    <string name="google_maps_key">AIzaSyDnB4xi-3jDp_ljKE6p7F0N3HjZMhutNBM	</string>
    <string name="delete_account_success">You successfully deleted your account</string>
    <string name="delete_account_fail">Your account was not deleted</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
</resources>
