<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1"
    tools:context="com.brandon.manhunt.Sign_in_page">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/username"
            android:textSize="15dp"
            android:layout_marginRight="20dp"
            android:textColor="#FFFFFF"/>

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="#FFF"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:layout_marginLeft="20dp"
            android:text="@string/password"
            android:textSize="15dp"
            android:layout_marginRight= "20dp"
            android:textColorHighlight="#FFFFFF"/>

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:background="@android:color/transparent"
        android:textColor="#FFF"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/status_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp"
        android:layout_gravity="center"/>
</LinearLayout>
